# spec-kit-flask

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.specify/memory/: constitution.md
specs/001-health-check/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-health-check/checklists/: requirements.md
specs/001-health-check/contracts/: health-endpoint.yaml
src/: __init__.py  app.py
src/blueprints/: __init__.py  health.py
tests/: conftest.py
tests/integration/: __init__.py  test_health_integration.py
tests/unit/: __init__.py  test_health.py
